[EFL] accessibility/textarea-line-for-index.html is failing https://bugs.webkit.org/show_bug.cgi?id=112015

Patch by Robert Plociennik <r.plociennik@samsung.com> on 2013-11-04
Reviewed by Mario Sanchez Prada.

Tools:

Provided implementation for AccessibilityUIElement::lineForIndex().

* DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
(AccessibilityUIElement::lineForIndex): Implemented.
* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::lineForIndex): Implemented.

LayoutTests:

Removed failure expectations.

* platform/efl-wk1/TestExpectations: The test is no longer failing.
* platform/efl-wk2/TestExpectations: The test is no longer failing.

Canonical link: https://commits.webkit.org/141929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158576 268f45cc-cd09-0410-ab3c-d52691b4dbfc