Tools/DumpRenderTree/atk/AccessibilityUIElementAtk.cpp
@@ -988,10 +988,22 @@ JSStringRef AccessibilityUIElement::columnIndexRange()
     return indexRangeInTable(m_element, false);
 }
 
-int AccessibilityUIElement::lineForIndex(int)
+int AccessibilityUIElement::lineForIndex(int index)
 {
-    // FIXME: implement
-    return 0;
+    if (!ATK_IS_TEXT(m_element))
+        return -1;
+
+    if (index < 0 || index > atk_text_get_character_count(ATK_TEXT(m_element)))
+        return -1;
+
+    GOwnPtr<gchar> text(atk_text_get_text(ATK_TEXT(m_element), 0, index));
+    int lineNo = 0;
+    for (gchar* offset = text.get(); *offset; ++offset) {
+        if (*offset == '\n')
+            ++lineNo;
+    }
+
+    return lineNo;
 }
 
 JSStringRef AccessibilityUIElement::boundsForRange(unsigned location, unsigned length)
